--- a/lions.html
+++ b/lions.html
@@ -28,74 +28,94 @@
 
 	<main class="lions" id = "main">
 		
-		<div class = overview>
-			<h1>Detroit Lions</h1>
-			<p>Dan campbell.</p>
-		  </div>
-	
-		<div class="division" id="division">
-			<img src="images/lions/nfc-logo.png" alt=""/>
+		<div class = "overview">
+			<h1 tabindex="0">Detroit Lions</h1>
+			<p tabindex="0">The Detroit Lions are a football team that play in the National Football League.</p>
+		</div>
+		
+		<div class="titles" id="division-title">
+			<h2 tabindex="0">Division</h2>
+			<p tabindex="0">NFC North</p>
+		</div>
+		<div class="division image" id="division">
+			<img tabindex="0" src="images/lions/nfc-logo.png" alt=""/>
 		</div>
 		<div class="textbox" id="division-text">
-			<p>The Lions are in the NFC North division</p>
+			<p tabindex="0">The Lions are in the NFC North division</p>
 		</div>
 
-		<div class="stadium" id="stadium">
-			<img src="images/lions/fordField.jpg" alt=""/>
+		<div class="titles" id="stadium-title">
+			<h2 tabindex="0">Stadiums</h2>
+			<p tabindex="0">Ford Field (current), Silverdome (old)</p>
+		</div>
+		<div class="stadium image" id="stadium">
+			<img tabindex="0" src="images/lions/fordField.jpg" alt=""/>
 		</div>
 		<div class="textbox" id="stadium-text">
-			<p>The Lions play at Ford Field</p>
+			<p tabindex="0">The Lions play at Ford Field in Detroit, MI</p>
 		</div>
-		<div class="stadium" id="old-stadium">
-			<img src="images/lions/silverdome.webp" alt=""/>
+		<div class="stadium image" id="old-stadium">
+			<img tabindex="0" src="images/lions/silverdome.webp" alt=""/>
 		</div>
 		<div class="textbox" id="old-stadium-text">
-			<p>The Lions used to play at the Silverdome in Pontiac MI</p>
+			<p tabindex="0">The Lions used to play at the Silverdome in Pontiac, MI</p>
 		</div>
 
-		<div class="coach" id="coach">
-			<img src="images/lions/campbell.jpg" alt=""/>
+		<div class="titles" id="coach-title">
+			<h2 tabindex="0">Coach</h2>
+			<p tabindex="0">Dan Campbell</p>
+		</div>
+		<div class="coach image" id="coach">
+			<img tabindex="0" src="images/lions/campbell.jpg" alt=""/>
 		</div>
 		<div class="textbox" id="coach-text">
-			<p>Dan Campbell is the head coach for the Lions</p>
+			<p tabindex="0">Dan Campbell is the head coach for the Lions and has been since 2021. He eats knee caps. He also played for the lions from 2006 to 2008.</p>
 		</div>
 
-		<div class="player" id="player1">
-			<img src="images/lions/st.brown.jpg" alt=""/>
+		<div class="titles" id="player-title">
+			<h2 tabindex="0">Players</h2>
+			<p tabindex="0">Amon-Ra St.Brown (WR,14), Jamaal Williams (RB,30), Aidan Hutchinson (DE,97)</p>
 		</div>
-		<div class="player-text" id="player1-text">
-			<p>Amon-ra St. Brown is a wide receiver for the Lions, ..</p>
+		<div class="player image" id="player1">
+			<img tabindex="0" src="images/lions/st.brown.jpg" alt=""/>
 		</div>
-		<div class="player" id="player2">
-			<img src="images/lions/jamaal-williams.webp" alt=""/>
+		<div class="player-text textbox" id="player1-text">
+			<p tabindex="0">Amon-Ra St. Brown is a wide receiver for the Lions. He is their leading receiever for the 2022 Season.</p>
 		</div>
-		<div class="player-text" id="player2-text">
-			<p>Jamaal Williams is a running back, ..</p>
+		<div class="player image" id="player2">
+			<img tabindex="0" src="images/lions/jamaal-williams.webp" alt=""/>
 		</div>
-		<div class="player" id="player3">
-			<img src="images/lions/hutchinson.jpg" alt=""/>
+		<div class="player-text textbox" id="player2-text">
+			<p tabindex="0">Jamaal Williams is a running back for the lions. He used to play for the Green Bay Packers.</p>
 		</div>
-		<div class="player-text" id="player3-text">
-			<p>Aidan Hutchinson is a Defensive End for the lions, ..</p>
+		<div class="player image" id="player3">
+			<img tabindex="0" src="images/lions/hutchinson.jpg" alt=""/>
+		</div>
+		<div class="player-text textbox" id="player3-text">
+			<p tabindex="0">Aidan Hutchinson is a Defensive End for the lions. He played College Football at the University of Michigan.</p>
 		</div>
 
-		<div class="hofplayer" id="hofplayer1">
+		<div class="titles" id="hofplayer-title">
+			<h2 tabindex="0">Hall of Fame Players</h2>
+			<p tabindex="0">Calvin Johnson (WR,81), Barry Sanders (RB,20), Joe Schmidt (MLB,56)</p>
+		</div>
+		<div class="hofplayer image" id="hofplayer1">
 			<img src="images/lions/megatron.jpg" alt=""/>
 		</div>
-		<div class="hofplayer-text" id="hofplayer1-text">
-			<p>Calvin Johnson, also known as Megatron, was a wide receiver for the Lions, ..</p>
+		<div class="hofplayer-text textbox" id="hofplayer1-text">
+			<p tabindex="0">Calvin Johnson, also known as Megatron, was a wide receiver for the Lions from 2007 to 2015. He was elected into the hall of fame in 2021.</p>
 		</div>
-		<div class="hofplayer" id="hofplayer2">
-			<img src="images/lions/sanders.jpg" alt=""/>
+		<div class="hofplayer image" id="hofplayer2">
+			<img tabindex="0" src="images/lions/sanders.jpg" alt=""/>
 		</div>
-		<div class="hofplayer-text" id="hofplayer2-text">
-			<p>Barry Sanders was a running back for the lions, ..</p>
+		<div class="hofplayer-text textbox" id="hofplayer2-text">
+			<p tabindex="0">Barry Sanders was a running back for the lions from 1989 to 1998. He was elected into the hall of fame in 2004. He led the NFL in rushing yards 4 times in his 10 season career.</p>
 		</div>
-		<div class="hofplayer" id="hofplayer3">
-			<img src="images/lions/schmidt.jpg" alt=""/>
+		<div class="hofplayer image" id="hofplayer3">
+			<img tabindex="0" src="images/lions/schmidt.jpg" alt=""/>
 		</div>
-		<div class="hofplayer-text" id="hofplayer3-text">
-			<p>Joe Schmidt was a , ..</p>
+		<div class="hofplayer-text textbox" id="hofplayer3-text">
+			<p tabindex="0">Joe Schmidt was a middle linebacker for the lions from 1953 to 1965. He was elected to the hall of fame in 1973. He led the lions to a NFL championship in 1957, and coached for the lions from 1967 to 1972.</p>
 		</div>
 
 
