--- a/pistons.html
+++ b/pistons.html
@@ -11,7 +11,7 @@
 
 <!-- All of the visible code in the page belongs in the body tag -->
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
+	<div class="skip"><a href="#pistonmain">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul class = "nav_links">
@@ -26,71 +26,124 @@
 		</nav>
 		
 	</header>
-	<main class = "pistons" id = "main">
-		<div class = overview>
-			<h1>Detroit Pistons</h1>
-			<p>coach.</p>
+	<main id = "pistonmain">
+		<div class = "overviewFlex" id="pistonHead">
+			<h1 tabindex="0">Detroit Pistons</h1>
+			<p tabindex="0">&emsp;The Pistons are a basketball team that play in the National Basketball Assocation. </p>
+		</div>
+	<div class = "pistons">
+	<div class="container" id="DivCont">
+		<div class="titlesFlex" id="division-titleFlex">
+			<h2 tabindex="0">Division</h2>
+			<p tabindex="0">Eastern Conference Central</p>
+		</div>
+		<div class="imgtext">
+			<div class="divisionFlex imageFlex" id="divisionFlex">
+			<img tabindex="0" src="images/pistons/centralDiv.png" alt=""/>
+			</div>
+			<div class="textboxFlex" id="division-textFlex">
+			<p tabindex="0">The Pistons are in the Central division in the Eastern Conference</p>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="stadCont">
+		<div class="titlesFlex" id="stadium-titleFlex">
+			<h2 tabindex="0">Stadiums</h2>
+			<p tabindex="0">Little Ceasers Arena (current), The Palace of Auburn Hills (old)</p>
+		</div>
+		<div class="imgtext">
+			<div class="stadiumFlex imageFlex" id="stadiumFlex">
+			<img tabindex="0" src="images/pistons/littleC.jpg" alt=""/>
+			</div>
+			<div class="textboxFlex" id="stadium-textFlex">
+			<p tabindex="0">The Pistons play at Little Caesers Arena</p>
+			</div>
+		</div>
+		<div class="imgtext">
+			<div class="old-stadiumFlex imageFlex" id="old-stadiumFlex">
+			<img tabindex="0" src="images/pistons/palace.jpg" alt=""/>
+			</div>
+			<div class="textboxFlex" id="old-stadium-textFlex">
+			<p tabindex="0">The Pistons used to play at The Palace in Auburn Hills. MI from 1988 to 2017.</p>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="coachCont">
+		<div class="titlesFlex" id="coach-titleFlex">
+			<h2 tabindex="0">Coach</h2>
+			<p tabindex="0">Casey</p>
+		</div>
+		<div class="imgtext">
+			<div class="coachFlex imageFlex" id="coachFlex">
+			<img tabindex="0" src="images/pistons/casey.jpg" alt=""/>
+			</div>
+			<div class="textboxFlex" id="coach-textFlex">
+			<p tabindex="0"> is the coach</p>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="playCont">
+		<div class="titlesFlex" id="player-titleFlex">
+			<h2 tabindex="0">Players</h2>
+			<p tabindex="0">Amon-Ra St.Brown (WR,14), Jamaal Williams (RB,30), Aidan Hutchinson (DE,97)</p>
+		</div>
+		<div class="imgtext">
+			<div class="playerFlex imageFlex" id="player1Flex">
+				<img tabindex="0" src="images/pistons/ivey.jpg" alt=""/>
+			</div>
+			<div class="player-textFlex textboxFlex" id="player1-textFlex">
+				<p tabindex="0">larkin is captain</p>
+			</div>
+		</div>
+	<div class="imgtext">
+		<div class="playerFlex imageFlex" id="player2Flex">
+			<img tabindex="0" src="images/pistons/cunningham.webp" alt=""/>
+		</div>
+		<div class="player-textFlex textboxFlex" id="player2-textFlex">
+			<p tabindex="0">cunningham plays pf oisfbneost oniestdonsgh niosth inrhts niorht onirht sniorb tjort niewo wen5hio nieot nieowth nioweh niseh oineth oinset oinew noiet oithr soientg niorbs  org</p>
+		</div>
+	</div>
+	<div class="imgtext">
+		<div class="playerFlex imageFlex" id="player3Flex">
+			<img tabindex="0" src="images/pistons/bojan.jpg" alt=""/>
+		</div>
+		<div class="player-textFlex textboxFlex" id="player3-textFlex">
+			<p tabindex="0">Bojan </p>
+		</div>
+	</div>
+	</div>
+	<div class="container" id="hofCont">
+		<div class="titlesFlex" id="hofplayer-titleFlex">
+			<h2 tabindex="0">Hall of Fame Players</h2>
+			<p tabindex="0">Calvin Johnson (WR,81), Barry Sanders (RB,20), Joe Schmidt (MLB,56)</p>
 		</div>
 	
-		<div class="division" id="">
-			<img src="images/pistons/centralDiv.png" alt=""/>
+		<div class="imgtext">
+			<div class="hofplayerFlex imageFlex" id="hofplayer1Flex">
+			<img tabindex="0" src="images/pistons/dumars.webp" alt=""/>
+			</div>
+			<div class="hofplayer-textFlex textboxFlex" id="hofplayer1-textFlex">
+			<p tabindex="0">Joe Dumars </p>
+			</div>
 		</div>
-		<div class="division-text" id="">
-			<p>The Pistons are in the Central division</p>
+		<div class="imgtext">
+			<div class="hofplayerFlex imageFlex" id="hofplayer2Flex">
+			<img tabindex="0" src="images/pistons/isiah.webp" alt=""/>
+			</div>
+			<div class="hofplayer-textFlex textboxFlex" id="hofplayer2-textFlex">
+			<p tabindex="0">Isiah Thomas </p>
+			</div>
 		</div>
-
-		<div class="stadium" id="">
-			<img src="images/pistons/littleC.jpg" alt=""/>
+		<div class="imgtext">
+			<div class="hofplayerFlex imageFlex" id="hofplayer3Flex">
+			<img tabindex="0" src="images/pistons/wallace.jpg" alt=""/>
+			</div>
+			<div class="hofplayer-textFlex textboxFlex" id="hofplayer3-textFlex">
+			<p tabindex="0">Ben Wallace</p>
+			</div>
 		</div>
-		<div class="stadium-text" id="">
-			<p>The Pistons play at Little Caesers Arena</p>
-		</div>
-
-		<div class="coach" id="">
-			<img src="images/pistons/casey.jpg" alt=""/>
-		</div>
-		<div class="coach-text" id="">
-			<p></p>
-		</div>
-
-		<div class="player1" id="">
-			<img src="images/pistons/cunningham.webp" alt=""/>
-		</div>
-		<div class="player1-text" id="">
-			<p></p>
-		</div>
-		<div class="player2" id="">
-			<img src="images/pistons/bojan.jpg" alt=""/>
-		</div>
-		<div class="player2-text" id="">
-			<p>Bojan </p>
-		</div>
-		<div class="player3" id="">
-			<img src="images/pistons/ivey.jpg" alt=""/>
-		</div>
-		<div class="player3-text" id="">
-			<p>Jaden Ivey is a PG for the Pistons, ...</p>
-		</div>
-
-		<div class="hofplayer1" id="">
-			<img src="images/pistons/dumars.webp" alt=""/>
-		</div>
-		<div class="hofplayer1-text" id="">
-			<p>Joe Dumars </p>
-		</div>
-		<div class="hofplayer2" id="">
-			<img src="images/pistons/isiah.webp" alt=""/>
-		</div>
-		<div class="hofplayer2-text" id="">
-			<p>Isiah Thomas </p>
-		</div>
-		<div class="hofplayer3" id="">
-			<img src="images/pistons/wallace.jpg" alt=""/>
-		</div>
-		<div class="hofplayer3-text" id="">
-			<p>Ben Wallace</p>
-		</div>
-
+	</div>
+	</div>
 	</main>
 
 	<!-- Footer is a sematic tag page that aids readability -->
