--- a/redWings.html
+++ b/redWings.html
@@ -11,7 +11,7 @@
 
 <!-- All of the visible code in the page belongs in the body tag -->
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
+	<div class="skip"><a href="#redWingmain">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul class = "nav_links">
@@ -26,72 +26,126 @@
 		</nav>
 		
 	</header>
-	<main class = "redWings" id = "main">
-		<div class = overview>
-			<h1>Detroit Red Wings</h1>
-			<p>coach.</p>
+	<main id = "redWingmain">
+		
+		<div class = "overviewFlex" id="redWingHead">
+			<h1 tabindex="0">Detroit Red Wings</h1>
+			<p tabindex="0">coach.</p>
 		</div>
-	
-		<div class="division" id="">
-			<img src="images/redWings/centralDiv.png" alt=""/>
+	<div class = "redWings">
+		<div class="container" id="DivCont">
+			<div class="titlesFlex" id="division-titleFlex">
+				<h2 tabindex="0">Division</h2>
+				<p tabindex="0">Atlantic Division in the Eastern Conference</p>
+			</div>
+			<div class="imgtext">
+				<div class="divisionFlex imageFlex" id="divisionFlex">
+				<img tabindex="0" src="images/redWings/wingsDiv.png" alt=""/>
+				</div>
+				<div class="textboxFlex" id="division-textFlex">
+				<p tabindex="0">The  are in the Central division in the Eastern Conference</p>
+				</div>
+			</div>
 		</div>
-		<div class="division-text" id="">
-			<p>The Lions are in the NFC North division</p>
+		<div class="container" id="stadCont">
+			<div class="titlesFlex" id="stadium-titleFlex">
+				<h2 tabindex="0">Stadiums</h2>
+				<p tabindex="0">Little Ceasers Arena (current), Joe Louis Arena (old)</p>
+			</div>
+			<div class="imgtext">
+				<div class="stadiumFlex imageFlex" id="stadiumFlex">
+				<img tabindex="0" src="images/redWings/littleC.jpg" alt=""/>
+				</div>
+				<div class="textboxFlex" id="stadium-textFlex">
+				<p tabindex="0">The Red Wings play at Little Caesers Arena</p>
+				</div>
+			</div>
+			<div class="imgtext">
+				<div class="old-stadiumFlex imageFlex" id="old-stadiumFlex">
+				<img tabindex="0" src="images/redWings/joeL.jpg" alt=""/>
+				</div>
+				<div class="textboxFlex" id="old-stadium-textFlex">
+				<p tabindex="0">The Red Wings used to play at Joe Louis Arena in Detroit, MI from  to 2017.</p>
+				</div>
+			</div>
 		</div>
-
-		<div class="stadium" id="">
-			<img src="images/redWings/littleC.jpg" alt=""/>
+		<div class="container" id="coachCont">
+			<div class="titlesFlex" id="coach-titleFlex">
+				<h2 tabindex="0">Coach</h2>
+				<p tabindex="0">Casey</p>
+			</div>
+			<div class="imgtext">
+				<div class="coachFlex imageFlex" id="coachFlex">
+				<img tabindex="0" src="images/redWings/lalonde.jpg" alt=""/>
+				</div>
+				<div class="textboxFlex" id="coach-textFlex">
+				<p tabindex="0"> is the coach</p>
+				</div>
+			</div>
 		</div>
-		<div class="stadium-text" id="">
-			<p>The Lions play at Ford Field</p>
+		<div class="container" id="playCont">
+			<div class="titlesFlex" id="player-titleFlex">
+				<h2 tabindex="0">Players</h2>
+				<p tabindex="0">Amon-Ra St.Brown (WR,14), Jamaal Williams (RB,30), Aidan Hutchinson (DE,97)</p>
+			</div>
+			<div class="imgtext">
+				<div class="playerFlex imageFlex" id="player1Flex">
+					<img tabindex="0" src="images/redWings/larkin.jpg" alt=""/>
+				</div>
+				<div class="player-textFlex textboxFlex" id="player1-textFlex">
+					<p tabindex="0">larkin is captain</p>
+				</div>
+			</div>
+		<div class="imgtext">
+			<div class="playerFlex imageFlex" id="player2Flex">
+				<img tabindex="0" src="images/redWings/husso.jpg" alt=""/>
+			</div>
+			<div class="player-textFlex textboxFlex" id="player2-textFlex">
+				<p tabindex="0">cunningham plays pf oisfbneost oniestdonsgh niosth inrhts niorht onirht sniorb tjort niewo wen5hio nieot nieowth nioweh niseh oineth oinset oinew noiet oithr soientg niorbs  org</p>
+			</div>
 		</div>
-
-		<div class="coach" id="">
-			<img src="images/redWings/lalonde.jpg" alt=""/>
+		<div class="imgtext">
+			<div class="playerFlex imageFlex" id="player3Flex">
+				<img tabindex="0" src="images/redWings/Kubalik.jpg" alt=""/>
+			</div>
+			<div class="player-textFlex textboxFlex" id="player3-textFlex">
+				<p tabindex="0">Bojan </p>
+			</div>
 		</div>
-		<div class="coach-text" id="">
-			<p>Dan Campbell is the head coach for the Lions</p>
 		</div>
-
-		<div class="player1" id="">
-			<img src="images/redWings/larkin.jpg" alt=""/>
+		<div class="container" id="hofCont">
+			<div class="titlesFlex" id="hofplayer-titleFlex">
+				<h2 tabindex="0">Hall of Fame Players</h2>
+				<p tabindex="0">Calvin Johnson (WR,81), Barry Sanders (RB,20), Joe Schmidt (MLB,56)</p>
+			</div>
+		
+			<div class="imgtext">
+				<div class="hofplayerFlex imageFlex" id="hofplayer1Flex">
+				<img tabindex="0" src="images/redWings/howe.jpg" alt=""/>
+				</div>
+				<div class="hofplayer-textFlex textboxFlex" id="hofplayer1-textFlex">
+				<p tabindex="0">Joe Dumars </p>
+				</div>
+			</div>
+			<div class="imgtext">
+				<div class="hofplayerFlex imageFlex" id="hofplayer2Flex">
+				<img tabindex="0" src="images/redWings/steve.jpg" alt=""/>
+				</div>
+				<div class="hofplayer-textFlex textboxFlex" id="hofplayer2-textFlex">
+				<p tabindex="0">Isiah Thomas </p>
+				</div>
+			</div>
+			<div class="imgtext">
+				<div class="hofplayerFlex imageFlex" id="hofplayer3Flex">
+				<img tabindex="0" src="images/redWings/lidstrom.jpg" alt=""/>
+				</div>
+				<div class="hofplayer-textFlex textboxFlex" id="hofplayer3-textFlex">
+				<p tabindex="0">Ben Wallace</p>
+				</div>
+			</div>
 		</div>
-		<div class="player1-text" id="">
-			<p>Larkin is the current captain</p>
 		</div>
-		<div class="player2" id="">
-			<img src="images/redWings/Kubalik.jpg" alt=""/>
-		</div>
-		<div class="player2-text" id="">
-			<p>Jamaal Williams is a running back, ..</p>
-		</div>
-		<div class="player3" id="">
-			<img src="images/redWings/husso.jpg" alt=""/>
-		</div>
-		<div class="player3-text" id="">
-			<p>Aidan Hutchinson is a Defensive End for the lions, ..</p>
-		</div>
-
-		<div class="hofplayer1" id="">
-			<img src="images/redWings/howe.jpg" alt=""/>
-		</div>
-		<div class="hofplayer1-text" id="">
-			<p>Calvin Johnson, also known as Megatron, was a wide receiver for the Lions, ..</p>
-		</div>
-		<div class="hofplayer2" id="">
-			<img src="images/redWings/lidstrom.jpg" alt=""/>
-		</div>
-		<div class="hofplayer2-text" id="">
-			<p>Barry Sanders was a running back for the lions, ..</p>
-		</div>
-		<div class="hofplayer3" id="">
-			<img src="images/redWings/steve.jpg" alt=""/>
-		</div>
-		<div class="hofplayer3-text" id="">
-			<p>Joe Schmidt was a , ..</p>
-		</div>
-
-	</main>
+		</main>
 
 	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
