--- a/tigers.html
+++ b/tigers.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul class = "nav_links">
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li><img src="images/lions/lions.jpg" class="logo" alt=""/></li>
+				<li><img src="images/tigers/logo.png" class="logo" alt=""/></li>
 				<li><a href = "index.html" >Detroit Sports</a></li>
 				<li><a href = "lions.html">Detroit Lions</a></li> 
 				<li><a href = "pistons.html">Detroit Pistons</a></li> 
@@ -24,78 +24,98 @@
                 <li class="active"><a href = "tigers.html">Detroit Tigers</a></li> <!--active-->
 			</ul>
 		</nav>
-		
 	</header>
 	
-	<main  class = "tigers" id = "main">
-		<div class = overview>
-			<h1>Detroit Tigers</h1>
-			<p>coach.</p>
+	<main class = "tigers" id = "main">
+
+		<div class = "overview">
+			<h1 tabindex="0">Detroit Tigers</h1>
+			<p tabindex="0">The tigers...</p>
 		</div>
 	
-		<div class="division" id="">
-			<img src="images/lions/nfc-logo.png" alt=""/>
+		<div class="titles tigTitles" id="division-title">
+			<h2 tabindex="0">Division</h2>
+			<p tabindex="0">AL East</p>
 		</div>
-		<div class="division-text" id="">
-			<p>The Lions are in the NFC North division</p>
+		<div class="division image" id="division">
+			<img tabindex="0" src="images/tigers/alcentral.png" alt=""/>
 		</div>
-
-		<div class="stadium" id="stadium">
-			<img src="images/tigers/comerica.webp" alt=""/>
-		</div>
-		<div class="stadium-text" id="">
-			<p>The Lions play at Ford Field</p>
-		</div>
-		<div class="stadium" id="old-stadium">
-			<img src="images/tigers/oldtiger.jpg" alt=""/>
-		</div>
-		<div class="stadium-text" id="">
-			<p>The Lions used to play at the Silverdome in Pontiac MI</p>
+		<div class="textbox" id="division-text">
+			<p tabindex="0">The Tigers are in the AL Central division.</p>
 		</div>
 
-		<div class="coach" id="">
-			<img src="images/tigers/hinch.jpg" alt=""/>
+		<div class="titles tigTitles" id="stadium-title" tabindex="0">
+			<h2 tabindex="0">Stadiums</h2>
+			<p tabindex="0">Comerica Park (current), Tiger Stadium (old)</p>
 		</div>
-		<div class="coach-text" id="">
-			<p>A.J. Hinch is the manager for the Tigers</p>
+		<div class="stadium image" id="stadium">
+			<img tabindex="0" src="images/tigers/comerica.webp" alt=""/>
 		</div>
-
-		<div class="player" id="player1">
-			<img src="images/tigers/cabrera.jpg" alt=""/>
+		<div class="textbox" id="stadium-text">
+			<p tabindex="0">The Tigers play at Comerica Park in Detroit, MI.</p>
 		</div>
-		<div class="player" id="player1-text">
-			<p>Miguel Cabrera is</p>
+		<div class="stadium image" id="old-stadium">
+			<img tabindex="0" src="images/tigers/oldtiger.jpg" alt=""/>
 		</div>
-		<div class="player" id="player2">
-			<img src="images/tigers/greene.jpg" alt=""/>
-		</div>
-		<div class="player-text" id="player2-text">
-			<p>Greene is an outfielder</p>
-		</div>
-		<div class="player" id="player3">
-			<img src="images/tigers/javier.jpg" alt=""/>
-		</div>
-		<div class="player-text" id="player3-text">
-			<p>Javier Baez</p>
+		<div class="textbox" id="old-stadium-text">
+			<p tabindex="0">The Tigers used to play at Tiger Stadium in Detroit, MI, from 1912 to 1999.</p>
 		</div>
 
-		<div class="hofplayer" id="hofplayer1">
-			<img src="images/tigers/cobb.jpg" alt=""/>
+		<div class="titles tigTitles" id="coach-title">
+			<h2 tabindex="0">Manager</h2>
+			<p tabindex="0">A.J. Hinch</p>
 		</div>
-		<div class="hofplayer-text" id="">
-			<p>Ty Cobb</p>
+		<div class="coach image" id="coach">
+			<img tabindex="0" src="images/tigers/hinch.jpg" alt=""/>
 		</div>
-		<div class="hofplayer" id="hofplayer2">
-			<img src="images/tigers/newhouser.jpg" alt=""/>
+		<div class="textbox" id="coach-text">
+			<p tabindex="0">A.J. Hinch has been the manager for the Tigers since after the 2020 season.</p>
 		</div>
-		<div class="hofplayer-text" id="hofplayer2-text">
-			<p>Hal Newhouser</p>
+
+		<div class="titles tigTitles" id="player-title">
+			<h2 tabindex="0">Players</h2>
+			<p tabindex="0">Miguel Cabrera (24,1B/DH), Riley Greene (31,CF), Javier Báez (28,SS)</p>
 		</div>
-		<div class="hofplayer" id="hofplayer3">
-			<img src="images/tigers/trammell.jpg" alt=""/>
+		<div class="player image" id="player1">
+			<img tabindex="0" src="images/tigers/cabrera.jpg" alt=""/>
 		</div>
-		<div class="hofplayer-text" id="hofplayer3-text">
-			<p>Alan Trammell</p>
+		<div class="player-text textbox" id="player1-text">
+			<p tabindex="0">Miguel Cabrera is a first baseman and Designated Hitter. He has over 500 homeruns in his career.</p>
+		</div>
+		<div class="player image" id="player2">
+			<img tabindex="0" src="images/tigers/greene.jpg" alt=""/>
+		</div>
+		<div class="player-text textbox" id="player2-text">
+			<p tabindex="0">Riley Greene is an outfielder. He was the 5th overall pick in the 2019 MLB draft.</p>
+		</div>
+		<div class="player image" id="player3">
+			<img tabindex="0" src="images/tigers/javier.jpg" alt=""/>
+		</div>
+		<div class="player-text textbox" id="player3-text">
+			<p tabindex="0">Javier Báez is a shortstop. He used to play for the Chicago Cubs.</p>
+		</div>
+
+		<div class="titles tigTitles" id="hofplayer-title">
+			<h2 tabindex="0">Hall of Fame Players</h2>
+			<p tabindex="0">Ty Cobb (NA/CF), Hal NewHouser (16/P), Alan Trammell (3,SS) </p>
+		</div>
+		<div class="hofplayer image" id="hofplayer1">
+			<img tabindex="0" src="images/tigers/cobb.jpg" alt=""/>
+		</div>
+		<div class="hofplayer-text textbox" id="hofplayer1-text">
+			<p tabindex="0">Ty Cobb was a centerfielder that played for detroit from 1905 to 1928, </p>
+		</div>
+		<div class="hofplayer image" id="hofplayer2">
+			<img tabindex="0" src="images/tigers/newhouser.jpg" alt=""/>
+		</div>
+		<div class="hofplayer-text textbox" id="hofplayer2-text">
+			<p tabindex="0">Hal Newhouser</p>
+		</div>
+		<div class="hofplayer image" id="hofplayer3">
+			<img tabindex="0" src="images/tigers/trammell.jpg" alt=""/>
+		</div>
+		<div class="hofplayer-text textbox" id="hofplayer3-text">
+			<p tabindex="0">Alan Trammell</p>
 		</div>
 
 	</main>
