--- a/pistons.html
+++ b/pistons.html
@@ -71,28 +71,28 @@
 	<div class="container" id="coachCont">
 		<div class="titlesFlex" id="coach-titleFlex">
 			<h2 tabindex="0">Coach</h2>
-			<p tabindex="0">Casey</p>
+			<p tabindex="0">Dwane Casey</p>
 		</div>
 		<div class="imgtext">
 			<div class="coachFlex imageFlex" id="coachFlex">
 			<img tabindex="0" src="images/pistons/casey.jpg" alt=""/>
 			</div>
 			<div class="textboxFlex" id="coach-textFlex">
-			<p tabindex="0"> is the coach</p>
+			<p tabindex="0">Dwane Casey has been the head coach since 2018.</p>
 			</div>
 		</div>
 	</div>
 	<div class="container" id="playCont">
 		<div class="titlesFlex" id="player-titleFlex">
 			<h2 tabindex="0">Players</h2>
-			<p tabindex="0">Amon-Ra St.Brown (WR,14), Jamaal Williams (RB,30), Aidan Hutchinson (DE,97)</p>
+			<p tabindex="0">Jaden Ivey (23,SG), Cade Cunningham (2,PG/SG), Bojan Bogdanović (44,SF)</p>
 		</div>
 		<div class="imgtext">
 			<div class="playerFlex imageFlex" id="player1Flex">
 				<img tabindex="0" src="images/pistons/ivey.jpg" alt=""/>
 			</div>
 			<div class="player-textFlex textboxFlex" id="player1-textFlex">
-				<p tabindex="0">larkin is captain</p>
+				<p tabindex="0">Jaden Ivey is a Shooting Guard. He played College basketball at Purdue and was drafted 5th overall in 2022</p>
 			</div>
 		</div>
 	<div class="imgtext">
@@ -100,7 +100,7 @@
 			<img tabindex="0" src="images/pistons/cunningham.webp" alt=""/>
 		</div>
 		<div class="player-textFlex textboxFlex" id="player2-textFlex">
-			<p tabindex="0">cunningham plays pf oisfbneost oniestdonsgh niosth inrhts niorht onirht sniorb tjort niewo wen5hio nieot nieowth nioweh niseh oineth oinset oinew noiet oithr soientg niorbs  org</p>
+			<p tabindex="0">Cade Cunningham is a Point Guard and Shooting Guard. He was drafted first overall in 2021.</p>
 		</div>
 	</div>
 	<div class="imgtext">
@@ -108,14 +108,14 @@
 			<img tabindex="0" src="images/pistons/bojan.jpg" alt=""/>
 		</div>
 		<div class="player-textFlex textboxFlex" id="player3-textFlex">
-			<p tabindex="0">Bojan </p>
+			<p tabindex="0">Bojan Bogdanović is a Small Forward. He plays for the Croation National Team.</p>
 		</div>
 	</div>
 	</div>
 	<div class="container" id="hofCont">
 		<div class="titlesFlex" id="hofplayer-titleFlex">
 			<h2 tabindex="0">Hall of Fame Players</h2>
-			<p tabindex="0">Calvin Johnson (WR,81), Barry Sanders (RB,20), Joe Schmidt (MLB,56)</p>
+			<p tabindex="0">Joe Dumars (4,SG/PG), Isiah Thomas (11,PG), Ben Wallace(3,C/PF)</p>
 		</div>
 	
 		<div class="imgtext">
@@ -123,7 +123,7 @@
 			<img tabindex="0" src="images/pistons/dumars.webp" alt=""/>
 			</div>
 			<div class="hofplayer-textFlex textboxFlex" id="hofplayer1-textFlex">
-			<p tabindex="0">Joe Dumars </p>
+			<p tabindex="0">Joe Dumars was a Shooting Guard and Point Guard. He played from 1985 to 1999 with the Pistons. He was inducted into the hall of fame in 2006.</p>
 			</div>
 		</div>
 		<div class="imgtext">
@@ -131,7 +131,7 @@
 			<img tabindex="0" src="images/pistons/isiah.webp" alt=""/>
 			</div>
 			<div class="hofplayer-textFlex textboxFlex" id="hofplayer2-textFlex">
-			<p tabindex="0">Isiah Thomas </p>
+			<p tabindex="0">Isiah Thomas was a Point Guard. He played for Detroit from 1981 to 1994 and was inducted into the hall of fame in 2005.</p>
 			</div>
 		</div>
 		<div class="imgtext">
@@ -139,7 +139,7 @@
 			<img tabindex="0" src="images/pistons/wallace.jpg" alt=""/>
 			</div>
 			<div class="hofplayer-textFlex textboxFlex" id="hofplayer3-textFlex">
-			<p tabindex="0">Ben Wallace</p>
+			<p tabindex="0">Ben Wallace was a Center and Power Forward that went undrafted and ended up in the Hall of Fame. He played for Detroit from 2000 to 2006 and 2009 to 2012. He was inducted into the hall of fame in 2021.</p>
 			</div>
 		</div>
 	</div>
