--- a/redWings.html
+++ b/redWings.html
@@ -43,7 +43,7 @@
 				<img tabindex="0" src="images/redWings/wingsDiv.png" alt=""/>
 				</div>
 				<div class="textboxFlex" id="division-textFlex">
-				<p tabindex="0">The  are in the Central division in the Eastern Conference</p>
+				<p tabindex="0">The Red Wings are in the Atlantic division in the Eastern Conference.</p>
 				</div>
 			</div>
 		</div>
@@ -65,35 +65,35 @@
 				<img tabindex="0" src="images/redWings/joeL.jpg" alt=""/>
 				</div>
 				<div class="textboxFlex" id="old-stadium-textFlex">
-				<p tabindex="0">The Red Wings used to play at Joe Louis Arena in Detroit, MI from  to 2017.</p>
+				<p tabindex="0">The Red Wings used to play at Joe Louis Arena in Detroit, MI from 1979 to 2017.</p>
 				</div>
 			</div>
 		</div>
 		<div class="container" id="coachCont">
 			<div class="titlesFlex" id="coach-titleFlex">
 				<h2 tabindex="0">Coach</h2>
-				<p tabindex="0">Casey</p>
+				<p tabindex="0">Derek Lalonde </p>
 			</div>
 			<div class="imgtext">
 				<div class="coachFlex imageFlex" id="coachFlex">
 				<img tabindex="0" src="images/redWings/lalonde.jpg" alt=""/>
 				</div>
 				<div class="textboxFlex" id="coach-textFlex">
-				<p tabindex="0"> is the coach</p>
+				<p tabindex="0">Derek Lalonde started coaching the Red Wings in 2022.</p>
 				</div>
 			</div>
 		</div>
 		<div class="container" id="playCont">
 			<div class="titlesFlex" id="player-titleFlex">
 				<h2 tabindex="0">Players</h2>
-				<p tabindex="0">Amon-Ra St.Brown (WR,14), Jamaal Williams (RB,30), Aidan Hutchinson (DE,97)</p>
+				<p tabindex="0">Dylan Larkin (71,C), Ville Husso (35,GK), Dominic Kubalik(81,F)</p>
 			</div>
 			<div class="imgtext">
 				<div class="playerFlex imageFlex" id="player1Flex">
 					<img tabindex="0" src="images/redWings/larkin.jpg" alt=""/>
 				</div>
 				<div class="player-textFlex textboxFlex" id="player1-textFlex">
-					<p tabindex="0">larkin is captain</p>
+					<p tabindex="0">Dylan Larkin is the Center and Captain of the Red Wings.</p>
 				</div>
 			</div>
 		<div class="imgtext">
@@ -101,7 +101,7 @@
 				<img tabindex="0" src="images/redWings/husso.jpg" alt=""/>
 			</div>
 			<div class="player-textFlex textboxFlex" id="player2-textFlex">
-				<p tabindex="0">cunningham plays pf oisfbneost oniestdonsgh niosth inrhts niorht onirht sniorb tjort niewo wen5hio nieot nieowth nioweh niseh oineth oinset oinew noiet oithr soientg niorbs  org</p>
+				<p tabindex="0">Ville Husso is a Goalkeeper for the Red Wings.</p>
 			</div>
 		</div>
 		<div class="imgtext">
@@ -109,7 +109,7 @@
 				<img tabindex="0" src="images/redWings/Kubalik.jpg" alt=""/>
 			</div>
 			<div class="player-textFlex textboxFlex" id="player3-textFlex">
-				<p tabindex="0">Bojan </p>
+				<p tabindex="0">Dominic Kubalik is a Forward for the Red Wings</p>
 			</div>
 		</div>
 		</div>
