--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul class = "nav_links">
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li><img src="images/tigers/logo.png" class="logo" alt=""/></li>
+				<li><img src="images/tigers/logo.png" class="logo" alt="Detroit Tigers Logo"/></li>
 				<li class="active"><a href = "index.html" >Detroit Sports</a></li>
 				<li><a href = "lions.html">Detroit Lions</a></li> 
 				<li><a href = "pistons.html">Detroit Pistons</a></li> <!--active-->
